fix style.css center aligning

--- a/SecondTask/style.css
+++ b/SecondTask/style.css
@@ -1,4 +1,3 @@
-/* Общие стили */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -6,7 +5,7 @@ body {
 }
 
 h1, h2, h3, h4 {
-    text-align: center; /* Центрирование заголовков */
+    text-align: center;
 }
 
 .content {
@@ -27,7 +26,7 @@ table, th, td {
 
 th, td {
     padding: 10px;
-    text-align: center; /* Центрирование текста в ячейках */
+    text-align: center;
 }
 
 tbody tr:nth-child(even) {
@@ -38,8 +37,6 @@ tbody tr:nth-child(odd) {
     background-color: #e9e9e9;
 }
 
-
-/* Шапка сайта */
 .site-header {
     background-color: #828ab1;
     padding: 20px;
@@ -60,7 +57,6 @@ tbody tr:nth-child(odd) {
     font-size: 24px;
 }
 
-/* Навигация */
 .main-nav ul {
     list-style-type: none;
     padding: 0;
@@ -68,19 +64,20 @@ tbody tr:nth-child(odd) {
 }
 
 .main-nav ul li {
-    display: inline-block; /* Используйте inline-block для выравнивания */
+    display: inline-block;
     margin: 0 15px;
 }
 
 .main-nav ul li a {
   text-decoration: none;
   font-weight: bold;
-  color: #333; /* Цвет текста навигации */
+  color: #333;
 }
 
 ul {
-  list-style-position: inside;
-  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
 }
 
 
@@ -88,9 +85,8 @@ form {
   text-align: center;
 }
 
-/* Подвал сайта */
 .site-footer {
     background-color: #CCD5FF;
     padding: 10px;
-    text-align: center; /* Центрирование текста */
+    text-align: center;
 }
